# docbrown3

./: Cargo.toml  items.bm  items2.bm
examples/: arrow_mmap.rs  read_large_file.rs
execution/: Cargo.toml
execution/benches/: filter.rs
execution/src/: lib.rs  mal.pest  plumbing.rs
execution/src/arrays/: mod.rs
src/: lib.rs  on_disk_time_events.rs  time_indexed_events.rs
src/arrow/: merge.rs  mod.rs
