[package]
name = "docbrown3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.14.0", features = ["derive", "min_const_generics", "zeroable_atomics"]}
libc = "0.2.147"
memmap2 = "0.7.1"
parking_lot = "0.12.1"
rio = "0.9.4"
