[package]
name = "docbrown3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow2 = {version = "0.18.0", features = ["compute"]}
async-recursion = "1.0.5"
async-trait = "0.1.74"
futures = "0.3.29"
futures-util = "0.3.29"
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.8.0"
thiserror = "1.0.49"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "filter"
harness = false
